[build-system]
requires = ["setuptools", "numpy", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "syri"
# project homepage: https://github.com/schneebergerlab/syri
authors = [
    {name = "Manish Goel", email="goel@mpipz.mpg.de"},
]
description = "Synteny and rearrangement identifier between whole-genome assemblies"
readme = "README.md"
# Limit python version as pysam is not available for higher python versions
requires-python = ">=3.8, <3.12"
keywords = ["Structural Variation", "SV", "Pangenomics", "Bioinformatics"]
license = {text = "MIT"}
dependencies = [
	"Cython",
	"numpy",
	"pandas",
	"scipy",
	"psutil",
	"igraph",
	"longestrunsubsequence",
	"pulp",
]
dynamic = ["version"]


[project.scripts]
syri = "syri.scripts.syri:main"
chroder = "syri.scripts.chroder:main"

[tool.setuptools.dynamic]
version = {attr = "syri.__version__"}
